Trust is our #1 priority. Ensuring *all* custom fields work when being re-queried for parent-initiated rollups (cc @solo-1234)

--- a/rollup/main/default/classes/Rollup.cls
+++ b/rollup/main/default/classes/Rollup.cls
@@ -1421,7 +1421,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
 
   private static String getParentWhereClause(List<SObject> calcItems, String lookupFieldOnLookupObject, String lookupObjectName) {
     DescribeSObjectResult parentDescribe = getSObjectTypeFromName(lookupObjectName).getDescribe();
-    String paredLookupFieldName = getParedFieldName(lookupFieldOnLookupObject, parentDescribe);
+    String paredLookupFieldName = getSObjectFieldByName(parentDescribe, lookupFieldOnLookupObject).getDescribe().getName();
     String parentWhereClause = ' IN (';
     for (SObject calcItem : calcItems) {
       String lookupId = (String) calcItem.get(paredLookupFieldName);
