--- a/rollup/main/default/classes/Rollup.cls
+++ b/rollup/main/default/classes/Rollup.cls
@@ -1307,9 +1307,29 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
   }
 
   global static void runFromTrigger() {
-    SObjectType sObjectType = getTriggerRecords().getSObjectType();
-    List<Rollup__mdt> rollupMetadata = getTriggerRollupMetadata(sObjectType);
-    runFromApex(rollupMetadata, null, getTriggerRecords(), getOldTriggerRecordsMap()).runCalc();
+    List<SObject> triggerRecords = getTriggerRecords();
+    List<Rollup__mdt> rollupMetadata = getTriggerRollupMetadata(triggerRecords.getSObjectType());
+    runFromApex(rollupMetadata, null, triggerRecords, getOldTriggerRecordsMap()).runCalc();
+  }
+
+  /**
+   * @param `List<SObject>` calcItems - the records whose values you'd like to roll up
+   * @param `TriggerOperation` rollupContext - acceptable values are:
+   * - TriggerOperation.AFTER_INSERT
+   * - TriggerOperation.AFTER_UDATE
+   * - TriggerOperation.BEFORE_DELETE
+   * - TriggerOperation.AFTER_UNDELETE
+   */
+  global static void runFromApex(List<SObject> calcItems, TriggerOperation rollupContext) {
+    shouldRun = true;
+    records = calcItems;
+    apexContext = rollupContext;
+
+    runFromTrigger();
+
+    records = null;
+    shouldRun = null;
+    apexContext = null;
   }
 
   private static Rollup runFromApex(List<Rollup__mdt> rollupMetadata, Evaluator eval, List<SObject> calcItems, Map<Id, SObject> oldCalcItems) {
@@ -1675,7 +1695,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
   }
 
   private static Boolean shouldRunFromTrigger() {
-    shouldRun = (shouldRun != null && shouldRun) || Trigger.isExecuting;
+    shouldRun = shouldRun || Trigger.isExecuting;
     // in order to accomodate CDC; we set the apexContext manually there
     // since technically all CDC is done from an AFTER_INSERT context
     if (Trigger.operationType != null && isCDC == false) {
